--- a/style.css
+++ b/style.css
@@ -194,7 +194,7 @@ header {
   text-transform: uppercase;
   font-weight: 900;
   font-size: 24px;
-  font-family: "Inter", sans-sserif;
+  font-family: "Inter", sans-serif;
 }
 .card-text {
   padding: 0 20px 0 20px;
